--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "search_term_amplifier",
+  "name": "search_term_amp",
   "version": "1.0.0",
   "description": "An Ads Script solution that extracts keywords from search term(query) report and adds the queried keywords to a specified campaign and ad group.",
-  "main": "search_term_amplifier.js",
+  "main": "search_term_amp.js",
   "scripts": {
     "test": "jasmine"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/google-marketing-solutions/search_term_amplifier"
+    "url": "https://github.com/google-marketing-solutions/search_term_amp"
   },
   "author": "",
   "license": "Apache-2.0",
